--- a/.github/workflows/apisix.yml
+++ b/.github/workflows/apisix.yml
@@ -1,5 +1,7 @@
 env:
-  IMAGE_NAME: ${{ github.repository }}-apisix
+  APISIX_IMAGE_NAME: ${{ github.repository }}-apisix
+  ETCD_IMAGE_NAME: ${{ github.repository }}-etcd
+  APISIX_ADMIN_IMAGE_NAME: ${{ github.repository }}-apisix-admin
 
 on:
   workflow_call:
@@ -27,11 +29,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      #Build apisix image
       - name: Extract metadata (tags, labels) for Docker
-        id: meta
+        id: meta-apisix
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ inputs.REGISTRY}}/${{ env.IMAGE_NAME }}
+          images: ${{ inputs.REGISTRY}}/${{ env.APISIX_IMAGE_NAME }}
           tags: |
             type=schedule
             type=raw,value=${{ github.base_ref }}
@@ -44,5 +47,26 @@ jobs:
           context: .
           file: docker/Dockerfile_apisix
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-apisix.outputs.tags }}
+          labels: ${{ steps.meta-apisix.outputs.labels }}
+
+      #Build etcd image
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta-etcd
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ inputs.REGISTRY}}/${{ env.ETCD_IMAGE_NAME }}
+          tags: |
+            type=schedule
+            type=raw,value=${{ github.base_ref }}
+            type=ref,event=tag
+            type=raw,value=pr-${{ github.event.pull_request.number}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          file: docker/Dockerfile_etcd
+          push: true
+          tags: ${{ steps.meta-etcd.outputs.tags }}
+          labels: ${{ steps.meta-etcd.outputs.labels }}
