--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -1,7 +1,8 @@
 FROM apache/apisix
 EXPOSE 9080 9180 9443
 ENV ALLOW_NONE_AUTHENTICATION=yes ETCD_ADVERTISE_CLIENT_URLS=http://127.0.0.1:2379
-COPY docker/apisix.yaml /usr/local/apisix/conf/apisix.yaml
+COPY docker/apisix-paths.yaml /usr/local/apisix/conf/apisix.yaml
+COPY docker/apisix-config.yaml /usr/local/apisix/conf/config.yaml
 USER root
 RUN apt-get update &&\
   apt-get install -y nginx &&\
