--- a/client/pom.xml
+++ b/client/pom.xml
@@ -71,17 +71,17 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>5.3.13.RELEASE</version>
+			<version>5.5.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>5.3.13.RELEASE</version>
+			<version>5.5.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>5.3.13.RELEASE</version>
+			<version>5.5.7</version>
 		</dependency>
 
 		<!-- Spring Security OAuth -->
