--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -18,6 +18,9 @@ on:
       ETCD_IMAGE:
         required: true
         type: string
+      APISIX_GUI_IMAGE:
+        required: true
+        type: string
       TARGET_ENV:
         required: true
         type: string
@@ -144,6 +147,7 @@ jobs:
           LIQUIBASE_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
           APISIX_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.APISIX_IMAGE }}:${{ inputs.IMAGE_TAG }}
           ETCD_IMAGE: ${{env.registry}}/${{ github.repository_owner }}/${{ env.ETCD_IMAGE }}:pr-${{ github.event.pull_request.number }}
+          APISIX_GUI_IMAGE: ${{env.registry}}/${{ github.repository_owner }}/${{ env.APISIX_GUI_IMAGE }}:pr-${{ github.event.pull_request.number }}
           API_KEY: ${{ secrets.API_KEY_DEV }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
