--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -146,8 +146,8 @@ jobs:
           SERVER_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.SERVER_IMAGE }}:${{ inputs.IMAGE_TAG }}
           LIQUIBASE_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.LIQUIBASE_IMAGE }}:${{ inputs.IMAGE_TAG }}
           APISIX_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.APISIX_IMAGE }}:${{ inputs.IMAGE_TAG }}
-          ETCD_IMAGE: ${{env.registry}}/${{ github.repository_owner }}/${{ env.ETCD_IMAGE }}:pr-${{ github.event.pull_request.number }}
-          APISIX_GUI_IMAGE: ${{env.registry}}/${{ github.repository_owner }}/${{ env.APISIX_GUI_IMAGE }}:pr-${{ github.event.pull_request.number }}
+          ETCD_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.ETCD_IMAGE }}:${{ inputs.IMAGE_TAG }}
+          APISIX_GUI_IMAGE: ${{inputs.registry}}/${{ github.repository_owner }}/${{ inputs.APISIX_GUI_IMAGE }}:${{ inputs.IMAGE_TAG }}
           API_KEY: ${{ secrets.API_KEY_DEV }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
