--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -19,100 +19,101 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.11",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "^13.3.11",
-    "@angular/compiler": "^13.3.11",
-    "@angular/core": "^13.3.11",
-    "@angular/forms": "^13.3.11",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "^13.3.11",
-    "@angular/platform-browser-dynamic": "^13.3.11",
-    "@angular/router": "^13.3.11",
-    "@angular/service-worker": "^13.3.11",
-    "@busacca/ng-pick-datetime": "^10.0.0",
-    "@ckeditor/ckeditor5-angular": "^4.0.0",
-    "@ckeditor/ckeditor5-build-decoupled-document": "^35.0.1",
-    "@ngrx/effects": "^13.1.0 ",
-    "@ngrx/entity": "^13.1.0",
-    "@ngrx/router-store": "^13.1.0 ",
-    "@ngrx/store": "^13.1.0 ",
-    "@ngrx/store-devtools": "^13.1.0 ",
-    "@swimlane/ngx-charts": "20.1.0",
+    "@angular/animations": "13.3.11",
+    "@angular/cdk": "13.3.9",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
+    "@angular/material": "13.3.9",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
+    "@angular/service-worker": "13.3.11",
+    "@busacca/ng-pick-datetime": "10.0.0",
+    "@ckeditor/ckeditor5-angular": "4.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "35.0.1",
+    "@ngrx/effects": "13.1.0 ",
+    "@ngrx/entity": "13.1.0",
+    "@ngrx/router-store": "13.1.0 ",
+    "@ngrx/store": "13.1.0 ",
+    "@ngrx/store-devtools": "13.1.0 ",
     "@qqnluaq/smk": "=1.0.16000",
+    "@swimlane/ngx-charts": "20.1.0",
     "@types/geojson": "7946.0.8",
     "@wf1/core-ui": "^2.4.5",
     "@wf1/incidents-rest-api": "^1.7.0-SNAPSHOT",
     "@wf1/orgunit-rest-api": "^2.0.2",
     "@wf1/wfcc-application-ui": "^1.1.0-SNAPSHOT",
     "@wf1/wfdm-document-management-api": "^1.2.0-SNAPSHOT",
-    "angular-oauth2-oidc": "^4.0.2",
-    "angular2-uuid": "^1.1.1",
-    "assert": "^2.0.0",
-    "core-js": "^2.5.7",
-    "dayjs": "^1.11.4",
-    "file-size": "^1.0.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "karma-viewport": "^1.0.9",
-    "leaflet": "^1.3.3",
-    "moment": "^2.22.2",
-    "ng-pick-datetime": "^6.0.16",
-    "ng-pick-datetime-ex": "^14.0.0",
+    "angular-oauth2-oidc": "4.0.2",
+    "angular2-uuid": "1.1.1",
+    "assert": "2.0.0",
+    "core-js": "2.5.7",
+    "dayjs": "1.11.4",
+    "file-size": "1.0.0",
+    "font-awesome": "4.7.0",
+    "jquery": "3.5.1",
+    "karma-viewport": "1.0.9",
+    "leaflet": "1.3.3",
+    "lightgallery": "2.7.0-beta.0",
+    "moment": "2.29.4",
+    "ng-pick-datetime": "6.0.16",
+    "ng-pick-datetime-ex": "14.0.0",
     "ng-pick-datetime-moment": "1.0.7",
-    "ngrx-store-localstorage": "^7.0.0",
-    "ngrx-store-logger": "^0.2.2",
+    "ngrx-store-localstorage": "7.0.0",
+    "ngrx-store-logger": "0.2.2",
     "ngx-connection-service": "7.0.3",
-    "ngx-cookie-service": "^14.0.1",
-    "ngx-mask": "^6.5.18",
-    "ngx-moment": "^3.1.0",
-    "ngx-pagination": "^5.1.1",
-    "ngx-treeview": "^6.0.2",
-    "node-sass": "^7.0.1",
-    "popper.js": "^1.14.4",
-    "puppeteer": "^15.4.0",
+    "ngx-cookie-service": "14.0.1",
+    "ngx-mask": "6.5.18",
+    "ngx-moment": "3.1.0",
+    "ngx-pagination": "5.1.1",
+    "ngx-treeview": "6.0.2",
+    "node-sass": "7.0.3",
+    "popper.js": "1.14.4",
+    "puppeteer": "15.4.0",
+    "qrcode": "1.5.1",
     "rxjs": "6.6.7",
-    "rxjs-tslint": "^0.1.8",
-    "tslib": "^2.0.0",
-    "vanilla-text-mask": "^5.1.1",
-    "video.js": "^7.15.4",
-    "zone.js": "~0.11.4",
-    "lightgallery": "2.7.0-beta.0"
+    "rxjs-tslint": "0.1.8",
+    "tslib": "2.0.0",
+    "vanilla-text-mask": "5.1.1",
+    "video.js": "7.15.4",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.8",
-    "@angular-devkit/core": "^13.3.8",
+    "@angular-devkit/build-angular": "13.3.8",
+    "@angular-devkit/core": "13.3.8",
     "@angular-eslint/builder": "13.5.0",
     "@angular-eslint/eslint-plugin": "13.5.0",
     "@angular-eslint/eslint-plugin-template": "13.5.0",
     "@angular-eslint/schematics": "13.5.0",
     "@angular-eslint/template-parser": "13.5.0",
-    "@angular/cli": "~13.3.8",
-    "@angular/compiler-cli": "^13.3.11",
-    "@angular/language-service": "^13.3.11",
-    "@ngrx/schematics": "^12.2.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jest": "~28.1.6",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "13.3.8",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/language-service": "13.3.11",
+    "@ngrx/schematics": "12.2.0",
+    "@types/jasmine": "3.6.0",
+    "@types/jasminewd2": "2.0.2",
+    "@types/jest": "28.1.6",
+    "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
-    "bootstrap": "^5.1.3",
-    "eslint": "^8.17.0",
+    "bootstrap": "5.1.3",
+    "eslint": "8.17.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-prefer-arrow": "latest",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "replace-in-file": "^3.4.2",
-    "ts-node": "~3.2.0",
-    "typescript": "~4.6.4"
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "6.3.4",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "protractor": "7.0.0",
+    "replace-in-file": "3.4.2",
+    "ts-node": "3.2.0",
+    "typescript": "4.6.4"
   }
 }
