Enabled retrieval of Amazon root cert

--- a/docker/apisix-config.yaml
+++ b/docker/apisix-config.yaml
@@ -64,3 +64,7 @@ deployment:
       - name: admin
         key: ${{API_KEY}}
         role: admin
+
+apisix:
+  ssl:
+    ssl_trusted_certificate: /etc/ca-certificates/AmazonRootCA1.pem
