--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -3,8 +3,9 @@ EXPOSE 9080 9180 9443
 ENV ALLOW_NONE_AUTHENTICATION=yes ETCD_ADVERTISE_CLIENT_URLS=http://127.0.0.1:2379
 COPY docker/apisix-paths.yaml /usr/local/apisix/conf/apisix.yaml
 COPY docker/apisix-config.yaml /usr/local/apisix/conf/config.yaml
+COPY docker/AmazonRootCA1.pem  /etc/ca-certificates/AmazonRootCA1.pem
 USER root
 RUN apt-get update &&\
   apt-get install -y nginx &&\
-  sed -i 's/#!\/usr\/bin\/env bash/&\nnginx\&/' /docker-entrypoint.sh
+  sed -i 's/#!\/usr\/bin\/env bash/&\nnginx\&\nulimit -n 4096/' /docker-entrypoint.sh
 COPY docker/default.conf /etc/nginx/conf.d/default.conf
