--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -19,6 +19,8 @@ env:
   LIQUIBASE_IMAGE: "wfnews-liquibase"
   APISIX_IMAGE: "wfnews-apisix"
   ETCD_IMAGE: "wfnews-etcd"
+  ETCD_PASSWORD: "default"
+  API_KEY: "default"
   APISIX_GUI_IMAGE: "wfnews-apisix-gui"
   TARGET_ENV: "dev"
   ALB_NAME: "default"
@@ -73,6 +75,7 @@ jobs:
           LIQUIBASE_IMAGE: ${{env.registry}}/bcgov/${{ env.LIQUIBASE_IMAGE }}:pr-${{ github.event.pull_request.number }}
           APISIX_IMAGE: ${{env.registry}}/bcgov/${{ env.APISIX_IMAGE }}:pr-${{ github.event.pull_request.number }}
           ETCD_IMAGE: ${{env.registry}}/bcgov/${{ env.ETCD_IMAGE }}:pr-${{ github.event.pull_request.number }}
+          ETCD_MASSWORD: ${{env.ETCD_PASSWORD}}
           APISIX_GUI_IMAGE: ${{env.registry}}/bcgov/${{ env.APISIX_GUI_IMAGE }}:pr-${{ github.event.pull_request.number }}
           API_KEY: ${{ secrets.API_KEY }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
