--- a/docker/Dockerfile_etcd
+++ b/docker/Dockerfile_etcd
@@ -4,4 +4,4 @@ ENV ETCD_ENABLE_V2: "true" \
     ETCD_ADVERTISE_CLIENT_URLS: "http://0.0.0.0:2379" \
     ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
 EXPOSE 2379
-USER ROOT
+USER root
