--- a/docker/Dockerfile_etcd
+++ b/docker/Dockerfile_etcd
@@ -1,8 +1,6 @@
 FROM bitnami/etcd:3.4.15
 USER root
 ENV ETCD_ENABLE_V2: "true" \
-    ALLOW_NONE_AUTHENTICATION: "yes" \
-    ETCD_ADVERTISE_CLIENT_URLS: "http://0.0.0.0:2379" \
-    ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
-RUN sed -i 's/#!\/bin\/bash/&\ntouch \/bitnami\/etcd\/data\/testFile\ndf -T >> \/var\/log\/ecs\/ecs-agent.log\n/' /opt/bitnami/scripts/etcd/entrypoint.sh
+    ALLOW_NONE_AUTHENTICATION: "yes" 
+RUN sed -i 's/#!\/bin\/bash/&\nchmod 755 \/bitnami\/etcd\/data\n/' /opt/bitnami/scripts/etcd/entrypoint.sh
 EXPOSE 2379
