--- a/docker/Dockerfile_etcd
+++ b/docker/Dockerfile_etcd
@@ -2,5 +2,6 @@ FROM bitnami/etcd:3.4.15
 USER root
 ENV ETCD_ENABLE_V2: "true" \
     ALLOW_NONE_AUTHENTICATION: "yes" 
-RUN sed -i 's/#!\/bin\/bash/&\nchmod -R 777 \/bitnami\/etcd\n/' /opt/bitnami/scripts/etcd/entrypoint.sh
+RUN sed -i 's/#!\/bin\/bash/&\nchown -R etcd \/bitnami\/etcd\n/' /opt/bitnami/scripts/etcd/entrypoint.sh &&\
+    useradd -u 1001 etcd
 EXPOSE 2379
