--- a/docker/Dockerfile_etcd
+++ b/docker/Dockerfile_etcd
@@ -2,6 +2,7 @@ FROM bitnami/etcd:3.4.15
 USER root
 ENV ETCD_ENABLE_V2: "true" \
     ALLOW_NONE_AUTHENTICATION: "yes" 
-RUN sed -i 's/#!\/bin\/bash/&\nchown -R etcd \/bitnami\/etcd\n/' /opt/bitnami/scripts/etcd/entrypoint.sh &&\
-    useradd -u 1001 etcd
+RUN sed -i 's/#!\/bin\/bash/&\nchmod -R 777 \/bitnami\/etcd\n/' /opt/bitnami/scripts/etcd/entrypoint.sh &&\
+    chmod 777 / &&\
+    chmod -R 777 /bitnami
 EXPOSE 2379
