--- a/docker/Dockerfile_etcd
+++ b/docker/Dockerfile_etcd
@@ -1,8 +1,10 @@
 FROM bitnami/etcd:3.4.15
 USER root
 ENV ETCD_ENABLE_V2: "true" \
-    ALLOW_NONE_AUTHENTICATION: "yes" 
-RUN sed -i 's/#!\/bin\/bash/&\nchmod -R 777 \/bitnami\/etcd\n/' /opt/bitnami/scripts/etcd/entrypoint.sh &&\
-    chmod 777 / &&\
-    chmod -R 777 /bitnami
+    ALLOW_NONE_AUTHENTICATION: "yes"
+COPY docker/etcd-entrypoint-root.sh /opt/bitnami/scripts/etcd/entrypoint-root.sh
+RUN adduser --uid 1001 --gid 0 --disabled-password --gecos etcd etcd &&\
+    chmod 777 /opt/bitnami/scripts/etcd/*.sh
+CMD [ "/opt/bitnami/scripts/etcd/run-root.sh" ]
+ENTRYPOINT [ "/opt/bitnami/scripts/etcd/entrypoint-root.sh" ]
 EXPOSE 2379
