--- a/docker/apisix-gui-conf.yaml
+++ b/docker/apisix-gui-conf.yaml
@@ -36,7 +36,7 @@ conf:
                           # It also support CIDR like 192.168.1.0/24 and 2001:0db8::/32
   etcd:
     endpoints:            # supports defining multiple etcd host addresses for an etcd cluster
-      - https://${{ETCD_URL}}
+      - ${{ETCD_URL}}
                           # yamllint disable rule:comments-indentation
                           # etcd basic auth info
     username: "root"    # ignore etcd username if not enable etcd auth
