--- a/docker/Dockerfile_apisix_gui
+++ b/docker/Dockerfile_apisix_gui
@@ -1,6 +1,6 @@
 FROM apache/apisix-dashboard
 EXPOSE 9000
 COPY docker/apisix-gui-conf.yaml /usr/local/apisix-dashboard/conf/conf.yaml
-COPY docker/AmazonRootCA1.pem   /etc/pki/ca-trust/extracted/pem/AmazonRootCA1.pem
+#COPY docker/AmazonRootCA1.pem   /etc/pki/ca-trust/extracted/pem/AmazonRootCA1.pem
 USER root
 RUN ulimit -n 4096
