--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -38,6 +38,7 @@
     "@ngrx/router-store": "13.1.0 ",
     "@ngrx/store": "13.1.0 ",
     "@ngrx/store-devtools": "13.1.0 ",
+    "@angular/youtube-player": "13.2.6",
     "@qqnluaq/smk": "=1.0.16000",
     "@swimlane/ngx-charts": "20.1.0",
     "@types/geojson": "7946.0.8",
