youtube player version update

--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "13.3.11",
     "@angular/router": "13.3.11",
     "@angular/service-worker": "13.3.11",
+    "@angular/youtube-player": "^13.2.6",
     "@busacca/ng-pick-datetime": "10.0.0",
     "@ckeditor/ckeditor5-angular": "4.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "35.0.1",
@@ -38,7 +39,6 @@
     "@ngrx/router-store": "13.1.0 ",
     "@ngrx/store": "13.1.0 ",
     "@ngrx/store-devtools": "13.1.0 ",
-    "@angular/youtube-player": "13.2.6",
     "@qqnluaq/smk": "=1.0.16000",
     "@swimlane/ngx-charts": "20.1.0",
     "@types/geojson": "7946.0.8",
