--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -19,6 +19,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/youtube-player": "^13.3.9",
     "@angular/animations": "13.3.11",
     "@angular/cdk": "13.3.9",
     "@angular/common": "13.3.11",
