Added SNS topics with support, fixed typo

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -99,3 +99,4 @@ jobs:
       WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{ secrets.DEV_WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET }}
       ETCD_PASSWORD: ${{ secrets.ETCD_PASSWORD_DEV }}
       API_KEY: ${{ secrets.API_KEY_DEV }}
+      SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS_DEV }}
