change openmaps to test layers

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -101,8 +101,8 @@
     },
 
     "mapServices": {
-        "#openmapsBaseUrl": "https://test.openmaps.gov.bc.ca/geo/pub/ows",
-        "openmapsBaseUrl": "https://openmaps.gov.bc.ca/geo/pub/ows",
+        "openmapsBaseUrl": "https://test.openmaps.gov.bc.ca/geo/pub/ows",
+        "#openmapsBaseUrl": "https://openmaps.gov.bc.ca/geo/pub/ows",
         "drivebcBaseUrl": "https://dev-maps.th.gov.bc.ca/geoV05/ows",
         "#wfnews": "http://localhost:1338",
         "wfnews": "https://wfnews-server.dev.bcwildfireservices.com"
