Added missing end indicator

--- a/docker/apisix-paths.yaml
+++ b/docker/apisix-paths.yaml
@@ -6,3 +6,5 @@ routes:
       nodes:
         "https://wfnews-server.${{LICENSE_PLATE}}-${{TARGET_ENV}}.nimbus.cloud.gov.bc.ca": 1
       type: roundrobin
+
+#END
