--- a/docker/apisix-paths.yaml
+++ b/docker/apisix-paths.yaml
@@ -1,17 +1,10 @@
 routes:
   -
-    id: httpbin
+    id: api
     uri: /*
     upstream:
       nodes:
-        "httpbin.org": 1
+        "wfnews-server.{DEPLOY_ENVIRONMENT}.nimbus.cloud.gov.bc.ca": 1
       type: roundrobin
-    plugin_config_id: 1
 
-plugin_configs:
-  -
-    id: 1
-    plugins:
-      response-rewrite:
-        body: "Hello APISIX\n"
-    desc: "response-rewrite"
+#END
