--- a/client/wfnews-war/src/main/resources/application.properties
+++ b/client/wfnews-war/src/main/resources/application.properties
@@ -6,6 +6,8 @@ openmaps.internal.url=https://openmaps.gov.bc.ca/geo/pub/ows
 drivebc.url=https://dev-maps.th.gov.bc.ca/geoV05/ows
 siteminder.url.prefix=https://logontest7.gov.bc.ca/clp-cgi/logoff.cgi?returl=
 bcWildFireSupportPage=https://intranet.gov.bc.ca/bcws/provincial-programs/strategic-initiatives-and-innovation/wildfire-one/wildfire-one-training
+appStoreUrl=https://apps.apple.com/ca/app/bc-wildfire-service/id1477675008
+googlePlayUrl=https://play.google.com/store/apps/details?id=ca.bc.gov.WildfireInformation&hl=en_CA&gl=US
 check.token.url=checkToken.jsp
 webade-oauth2.client.id=WFNEWS-UI
 webade-oauth2.wfnews-incident-manager-ui.client.secret=secret-test
