--- a/docker/apisix-paths.yaml
+++ b/docker/apisix-paths.yaml
@@ -4,7 +4,7 @@ routes:
     uri: /*
     upstream:
       nodes:
-        "wfnews-server.{DEPLOY_ENVIRONMENT}.nimbus.cloud.gov.bc.ca": 1
+        "wfnews-server.${LICENSE_PLATE}-${TARGET_ENV}.nimbus.cloud.gov.bc.ca": 1
       type: roundrobin
 
 #END
