--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -6,5 +6,5 @@ COPY docker/AmazonRootCA1.pem  /etc/ca-certificates/AmazonRootCA1.pem
 USER root
 RUN apt-get update &&\
   apt-get install -y nginx gettext &&\
-  sed -i 's@#!/usr/bin/env bash@&\nnginx\&\nulimit -n 4096\nenvsubst < /usr/local/apisix/conf/apisix.yaml' /docker-entrypoint.sh
+  sed -i 's@#!/usr/bin/env bash@&\nnginx\&\nulimit -n 4096\nenvsubst < /usr/local/apisix/conf/apisix.yaml@' /docker-entrypoint.sh
 COPY docker/default.conf /etc/nginx/conf.d/default.conf 
