--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -6,6 +6,7 @@ COPY docker/apisix-config.yaml /usr/local/apisix/conf/config.yaml
 COPY docker/AmazonRootCA1.pem  /etc/ca-certificates/AmazonRootCA1.pem
 USER root
 RUN apt-get update &&\
-  apt-get install -y nginx gettext
-  #  sed -i 's@#!/usr/bin/env bash@&\nnginx\&\nulimit -n 4096\nenvsubst < /usr/local/apisix/conf/apisix-base.yaml > /usr/local/apisix/conf/apisix.yaml@' /docker-entrypoint.sh
+  apt-get install -y nginx gettext vim &&\
+  sed -i 's@#!/usr/bin/env bash@&\nnginx\&\nulimit -n 4096@' /docker-entrypoint.sh
+USER 1001
 COPY docker/default.conf /etc/nginx/conf.d/default.conf 
