--- a/docker/apisix-paths.yaml
+++ b/docker/apisix-paths.yaml
@@ -1,10 +1,19 @@
 routes:
-  -
-    id: api
-    uri: /*
+  - uri: /*
+    plugins:
+      proxy-rewrite:
+        host: "wfnews-server.pp93w9-dev.nimbus.cloud.gov.bc.ca"
+        uri: "/"
+        headers:
+          - X-Api-Version: v1
+          - X-Api-Engine: apisix
+          - X-Api-useless:
     upstream:
       nodes:
-        "wfnews-server.pp93w9-dev.nimbus.cloud.gov.bc.ca": 1
+        "httpbin.org": 1
       type: roundrobin
+
+plugins:
+  - name: proxy-rewrite
 
 #END
