--- a/docker/apisix-paths.yaml
+++ b/docker/apisix-paths.yaml
@@ -4,13 +4,9 @@ routes:
       proxy-rewrite:
         host: "wfnews-server.pp93w9-dev.nimbus.cloud.gov.bc.ca"
         uri: "/"
-        headers:
-          - X-Api-Version: v1
-          - X-Api-Engine: apisix
-          - X-Api-useless:
     upstream:
       nodes:
-        "wfnews-api.pp93w9-dev.nimbus.cloud.gov.bc.ca": 1
+        "wfnews-api.dev.bcwildfireservices.com": 1
       type: roundrobin
 
 plugins:
