--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -1,12 +1,9 @@
 FROM apache/apisix
-EXPOSE 9080 9180 9443
+EXPOSE 8080 9080 9180 9443
 #COPY docker/apisix-paths.yaml /usr/local/apisix/conf/apisix-base.yaml
+RUN apt-get update &&\
+  apt-get install -y nginx &&\
+  sed -i 's/#!\/usr\/bin\/env bash/&\nnginx\&/' /docker-entrypoint.sh
 COPY docker/apisix-paths.yaml /usr/local/apisix/conf/apisix.yaml
 COPY docker/apisix-config.yaml /usr/local/apisix/conf/config.yaml
-COPY docker/AmazonRootCA1.pem  /etc/ca-certificates/AmazonRootCA1.pem
-USER root
-RUN apt-get update &&\
-  apt-get install -y nginx gettext vim &&\
-  sed -i 's@#!/usr/bin/env bash@&\nnginx\&\nulimit -n 4096@' /docker-entrypoint.sh
-USER 1001
-COPY docker/default.conf /etc/nginx/conf.d/default.conf 
+COPY docker/default.conf /etc/nginx/conf.d/default.conf
