--- a/server/wfnews-service-api/pom.xml
+++ b/server/wfnews-service-api/pom.xml
@@ -198,6 +198,11 @@
 		<version>2.12.1</version>
 	</dependency>
 
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sns</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<!-- Configure the resources to be filtered for property replacement -->
