nginx-based configuration

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,5 +1,24 @@
+limit_req_zone $binary_remote_addr zone=wfnewslimit:10m rate=20r/s;
+
+
 server {
   listen 8080;
   server_name _;
-  return 200;
+
+  location /_validate_apikey {
+    internal;
+
+    if ($http_apikey != {API_KEY}) {
+      return 401;
+    }
+
+    return 204;
+  }
+  
+  location / {
+    limit_req zone=wfnewslimit burst=20 nodelay;
+    auth_request /_validate_apikey;
+    
+    proxy_pass https://wfnews-server.{LICENSE_PLATE}-{TARGET_ENV}.nimbus.cloud.gov.bc.ca
+  }
 }
