--- a/docker/default.conf
+++ b/docker/default.conf
@@ -19,6 +19,6 @@ server {
     limit_req zone=wfnewslimit burst=20 nodelay;
     auth_request /_validate_apikey;
     
-    proxy_pass https://wfnews-server.{LICENSE_PLATE}-{TARGET_ENV}.nimbus.cloud.gov.bc.ca
+    proxy_pass https://wfnews-server.{LICENSE_PLATE}-{TARGET_ENV}.nimbus.cloud.gov.bc.ca;
   }
 }
